--- a/environment.yml
+++ b/environment.yml
@@ -253,35 +253,65 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
+      - aiohttp==3.8.4
+      - aiosignal==1.3.1
       - alembic==1.9.4
+      - async-timeout==4.0.2
+      - audioread==3.0.0
+      - bertviz==1.4.0
+      - boto3==1.26.85
+      - botocore==1.29.85
       - cmaes==0.9.1
       - coloredlogs==15.0.1
       - colorlog==6.7.0
+      - datasets==2.10.1
+      - dill==0.3.6
       - filelock==3.9.0
       - flatbuffers==23.3.3
+      - frozenlist==1.3.3
+      - fsspec==2023.3.0
       - greenlet==2.0.2
       - huggingface-hub==0.12.1
       - humanfriendly==10.0
+      - jmespath==1.0.1
       - joblib==1.2.0
+      - lazy-loader==0.1
+      - librosa==0.10.0
+      - llvmlite==0.39.1
       - mako==1.2.4
       - mpmath==1.2.1
+      - msgpack==1.0.4
+      - multidict==6.0.4
+      - multiprocess==0.70.14
+      - numba==0.56.4
       - onnx==1.13.1
       - onnxruntime==1.14.1
       - onnxruntime-tools==1.7.0
       - optuna==3.1.0
+      - pooch==1.7.0
       - protobuf==3.20.2
       - py-cpuinfo==9.0.0
       - py3nvml==0.2.7
+      - pyarrow==11.0.0
+      - pynndescent==0.5.8
       - pyyaml==6.0
       - regex==2022.10.31
+      - responses==0.18.0
+      - s3transfer==0.6.0
       - scikit-learn==1.2.1
       - scipy==1.10.1
       - sentencepiece==0.1.97
+      - seqeval==1.2.2
+      - soundfile==0.12.1
+      - soxr==0.3.4
       - sqlalchemy==2.0.4
       - sympy==1.11.1
       - threadpoolctl==3.1.0
       - tokenizers==0.13.2
       - tqdm==4.65.0
       - transformers==4.26.1
+      - umap-learn==0.5.3
       - xmltodict==0.13.0
+      - xxhash==3.2.0
+      - yarl==1.8.2
 prefix: /home/tobi/miniconda3/envs/nlp
